<resources>
    <string name="app_name">Duchess</string>
    <string name="alarm">Alarm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_alarm_type">Choose Alarm Type</string>
    <string name="reminders">Reminders</string>
    <string name="schedule">Schedule</string>
    <string name="title_activity_reminder">ReminderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="opens_the_editor_activity">Opens the editor activity</string>
    <string name="overview">Overview</string>
    <string name="course_id_eg_econ_312">Course ID Eg: ECON 312</string>
    <string name="course_name_eg_microeconomics">Course Name Eg: Microeconomics</string>
    <string name="topic_eg_demand">Topic Eg: Demand</string>
    <string name="when_to_study">When To Study</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="repeat">Repeat</string>
    <string name="done">Alarm Done</string>
    <string name="note">Note</string>
    <string name="thing_to_note">Thing to note</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Schedule?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_schedule_successful">Delete schedule successful</string>
    <string name="editor_delete_schedule_unsuccessful">Delete schedule unsuccessful</string>
    <string name="not_repeating">Not Repeating</string>
    <string name="once">Once</string>
    <string name="in_every_3_days">In Every 3 days</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="add_a_schedule">Add a schedule</string>
    <string name="schedule_update_successful">Schedule Updated Successfully</string>
    <string name="schedule_update_failed">Schedule Update Failed</string>
    <string name="schedule_saved">Schedule Saved</string>
    <string name="image_to_check_if_schedule_is_repeating">Image to check if scedule is repeating</string>
    <string name="image_to_check_if_schedule_is_done">image to check if schedule is done</string>
    <string name="you_may_delay_but_time_will_not">You may delay, but time will not.</string>
    <string name="get_started_by_adding_a_schedule">Get started by adding a schedule</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="is_it_online">Is It Online ?</string>
    <string name="lectures">Lectures</string>
    <string name="project">Project</string>
    <string name="quiz">Quiz</string>
    <string name="assignment">Assignment</string>
    <string name="exam">Examination</string>
    <string name="interim_assessment">Interim Assesment (Mid-Sem)</string>
    <string name="other">Other</string>
    <string name="url">URL</string>
    <string name="type_paste_url_here">Type/Paste url here</string>
    <string name="tap_to_open_url">Tap to Open Url</string>
    <string name="get_started_by_adding_a_reminder">Get started by adding a reminder</string>
    <string name="reminder_empty_text">People are machines of forgetfulness</string>
    <string name="context_edit">Edit</string>
    <string name="context_mark_as_done">Mark As Done</string>
    <string name="open_link">Open Link</string>
    <string name="past_due">Past due: </string>
    <string name="open_site">Open Site</string>
    <string name="when_to_remind">When to Remind</string>
    <string name="open_pdf_document_list">.pdf files</string>
    <string name="open_doc_amp_docx_document_list"><![CDATA[.doc & .docx files]]></string>
    <string name="open_xlsx_xls_amp_csv_document_list"><![CDATA[.xlsx, .xls & .csv files]]></string>
    <string name="open_ppt_amp_pptx_document_list"><![CDATA[.ppt & .pptx files]]></string>
    <string name="try_turning_on_mobile_data_wifi_or_better_network">Try turning on Mobile data, Wifi or Better Network</string>
    <string name="no_internet_connection_or_bad_network">No Internet Connection or Bad Network</string>
    <string name="chatroom">ChatRoom</string>
    <string name="glance_learning_blog_post">Glance Learning Blog Post</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="delete_all_confirmation"><![CDATA["Are you sure you want to clear all your Reminders?"]]></string>
    <string name="delete_allschedules_confirmation"> Are you sure You want to Delete All Schedules ?</string>

</resources>